web/static/css/app.css
/* ... */
.footer-section {
  margin:5vh 10vw 5vh 10vw;
  width:20vw;
  font-family:Avenir, sans-serif;
  font-size:0.8em;
}

.footer-section-icons {
  max-width:10vw;
  min-width:80px;
}

summary {
  color:black;
}

.footer-info {
  color:white;
  letter-spacing:0.05em;
  font-weight:100;
  margin:0;
}

.footer-icon {
  max-width:2.5vw;
  min-width:25px;
  margin:0 0.5vw 0 0.5vw;
}

a {
  text-decoration:none;
}

/*
* CONSULTANCY - WHAT WE DO
*/

#what-we-do-section {
  background:-webkit-linear-gradient(rgb(230,48,46), rgb(166,48,44));
  box-sizing:border-box;

  display:flex;
  align-content:center;
  align-items:center;

  font-family:Avenir, sans-serif;
  color:#ff9999;
}

#what-we-do-container {
  width:40vw;
  padding:0 0 0 10vw;
}

#what-we-do {
  width:20vw;
  text-transform:lowercase;
  font-weight:100;
  color:#fff;
}

#what-we-do-underline {
  border-bottom: 2px solid #fff;
  width:5vw;
}

#what-we-do-text {
  width:40vw;
  font-size:0.8em;
}

.what-we-do-relevant {
  font-weight:800;
  color:#fff;
}

/*
* CONSULTANCY - OUR PROCESS
*/

#our-process-section {
  box-sizing:border-box;

  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:column;
  flex-direction:column;
  align-items:center;
  justify-content:center;

  overflow:hidden;
  height:100vh;
  background-image:url("/images/our-process-cover.png");
  background-repeat:no-repeat;
  background-size:cover;
  position:relative;
}

#our-process-video-color {

  animation: fade 4s 1s infinite linear alternate;
  background-image:url("/images/our-process-video-cover.png");
  background-color:#000;
  background-blend-mode:multiply;

  opacity:0.7;

  position:absolute;
  top:0;
  right:0;
  bottom:0;
  left:0;
}

#our-process {
  width:80vw;
  font-family:Avenir, sans-serif;
  text-transform:lowercase;
  font-weight:100;
  color:#fff;
  position:absolute;
  top:1em;
}

#our-process-cards-container {
  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:row wrap;
  flex-direction:row wrap;
  align-items:top;
  justify-content: space-around;

  height:30vh;
  position:absolute;
}

.our-process-card {
  background-color:#fff;
  opacity:0.7;
  box-shadow:0 0 15px #5f4444;

  width:300px;
  height:60vh;
  margin:0 0.5vw 0 0.5vw;
  padding:0.5em;
  bottom:3em;

  font-family:Avenir, sans-serif;
  text-align:justify;
}

/*
* CONSULTANCY - PENDING SECTION
*/

/*
* CONSULTANCY - CLIENTS
*/

#clients-section {
  background-color:rgb(192,189,189);
  box-sizing:border-box;

  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:column;
  flex-direction:column;
  align-content:center;

  font-family:Avenir, sans-serif;
  color:#ff9999;
}

#clients-container {
  width:40vw;
  padding:0 0 0 10vw;
  top:20;
}

#clients {
  width:20vw;
  text-transform:lowercase;
  font-weight:100;
  font-size:1.5em;
  color:#fff;
}

#clients-underline {
  border-bottom: 2px solid rgb(230,48,46);
  width:5vw;
}

#clients-logos-container {
  padding:0 0 0 10vw;
  margin: 5vh 0 0 0;
}

.clients-logo {
  max-width: 20vw;
  min-width: 65px;
  margin:1em;
}

#mattel {
  max-width: 12vw;
  min-width: 30px;
}

/*
* SHARED-ECONOMY ENGINE - DELUXE
*/

#deluxe-section {
  background-image:url("/images/deluxe-cover.png");
  background-size:cover;
  box-sizing:border-box;

  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:column;
  flex-flow:column;
  align-content:center;
  align-items:center;

  font-family:Avenir, sans-serif;
  color:#ff9999;
}

#deluxe-logo {
  max-width:30vw;
  min-width:180px;
  margin:25vh 0 10vh 0;
}

#deluxe-icon {
  max-width:10vw;
  min-width:70px;
}

#deluxe-text {
  margin:10vh;
  font-size:1.2em;
  color:white;
}

#deluxe-app {
  position:static;
  margin:0;
  max-width:55vw;
  min-width:350px;
  margin:-20vw 0 0 -100vw;
}

/*
* SHARED-ECONOMY ENGINE - FONDAPP
*/

#fondapp-section {
  background-image:url("/images/fondapp-cover.png");
  background-size:cover;
  box-sizing:border-box;

  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:row;
  flex-flow:row;
  align-content:center;
  align-items:center;

  font-family:Avenir, sans-serif;
  color:#ff9999;
}

#fondapp-container {
  width:80vw;
  padding:20vw;
}

#fondapp-icon {
  max-width:10vw;
  min-width:70px;
}

#fondapp {
  font-family:PragmataPro, sans-serif;
  text-transform:uppercase;
  width:10vw;
  text-align:center;
  font-size:1.2em;
  letter-spacing:0.05em;
}

#fondapp-app {
  position:static;
  margin:40vh 35vw 0 0;
  max-height:60vh;
}

/*
* EVENTS - NIM
*/

#nim-section {
  box-sizing:border-box;

  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:row;
  flex-flow:row;
  align-content:center;
  align-items:center;

  font-family:Avenir, sans-serif;
}

#nim-imtt {
  max-width:20vw;
  min-width:100px;
  margin:0 5vw 0 10vw;
}

#nim-text {
  width:40vw;
  text-align:justify;
  color:black;
  font-weight:100;
  margin:0 0 0 10vw;
}

.nim-text-feature {
  font-weight:800;
}

/*
* EVENTS - NIM EVENTS / MEETUPS
*/

.nim-banner {
  background-color:black;
  color:white;
  text-align:center;
  font-family:Avenir, sans-serif;
  text-transform:uppercase;
  letter-spacing:0.2em;
  font-size:1.5em;
  padding:0.1em;
}

/*
* EVENTS - NIM EVENTS
*/

#nim-events-container {
  box-sizing:border-box;

  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:row wrap;
  flex-flow:row wrap;
  align-content:center;
  align-items:center;
  justify-content:center;

  margin:2vh 2vw 0 2vw;
}
.nim-event {
  max-width:10vw;
  min-width:100px;
  margin:1em;
  padding:1em;
}

.nim-event-image {
  width:15vw;
}

.nim-event-text {
  font-family:Avenir,sans-serif;
  font-size:0.7em;
  text-align:justify;
}

#nim-creaton {
  width:18vw;
  margin:-20vh 0 0 0;
}

/*
* EVENTS - NIM MEETUPS
*/

#nim-meetups-intro {
  font-family:Avenir, sans-serif;
  font-size:0.8em;
  width:80vw;
  text-align:justify;
  margin:2vh auto -3vh auto;
}
/* ... */

